<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="app_name">医行者</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_message">问诊窗口</string>
    <string name="title_contact">患者卡片</string>
    <string name="title_tool">工具</string>
    <string name="title_mine">我的</string>
    <string name="title_new_patient">新的患者</string>
    <string name="title_label_patient">标签患者</string>
    <string name="title_label">标签列表</string>
    <string name="add_label">添加标签</string>
    <string name="label_patient">标记患者</string>
    <string name="update_label">编辑分组</string>
    <string name="edit_label">编辑标签</string>
    <string name="edit_coment">编辑备注</string>
    <string name="delete_label">删除</string>
    <string name="finish_add_label">添加</string>
    <string name="finish_update_label">保存</string>
    <string name="add_label_name_hint">标签名称</string>
    <string name="update_label_name_hint">新标签名称</string>
    <string name="btn_conversation">对话</string>
    <string name="btn_label">标签</string>
    <string name="btn_remark">备注</string>
    <string name="tool_fast_response">快捷回复</string>
    <string name="tool_fast_response_add">添加条目</string>
    <string name="tool_disease_survey">病情调查</string>
    <string name="tip_search_contact">搜索姓名</string>
    <string name="descImage">图片描述</string>
    <string name="test_tip_timeline_referral">发起复诊</string>
    <string name="test_tip_patient_semicolon">患者：</string>
    <string name="test_tip_diagnosis_semicolon">诊断：</string>
    <string name="test_tip_evaluate_remark">备注：</string>
    <string name="test_tip_query_time">分组：</string>
    <string name="et_account_hint">手机号</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登 录</string>
    <string name="loginning">正在登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注 册</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="clinic_time_schedule">门诊时间</string>


    <string name="smssdk_bind_mobile">点击绑定手机号</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="tv_tips_password">密码由6-16位数字,字母或符号组成,不能是9位一下纯数字组成</string>
    <string name="tv_tips_name">建议填写你的真实姓名,让你的朋友更容易人出你,此昵称以后可以随时修改</string>
    <string name="et_name_hint">昵称</string>

    <string name="disease_survey_create_new">欢迎参加本次答题</string>
    <string name="content_des" />

    <string name="lock_screen">免打扰</string>
    <string name="favor">填备注</string>
    <string name="setting">看病历</string>
    <string name="home_screen">打标签</string>

    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>

    <string name="qrcode_description">扫一扫, 加医生, 感动无限</string>

    <string name="auth_not_check">未认证</string>
    <string name="auth_in_progress">认证中</string>
    <string name="auth_not_pass">认证未通过</string>
    <string name="auth_pass">已认证</string>

    <string name="auth_notice"> 你的医生认证已成功通过审核</string>
    <string name="max_withdraw"> 可提现的最大金额为%1$.2f元 </string>
    <string name="connect_server_fail">连接服务器失败</string>

    <!-- 调查问卷-->
    <string name="survey_single_choice">单选题</string>
    <string name="survey_multi_choices">多择题</string>
    <string name="survey_subjective">主观题</string>
    <string name="survey_image">图像题</string>
    <string name="survey_choices">选择题</string>
    <string name="survey_allow_upload_image">允许患者在答案中上传图片</string>
    <string name="survey_set_multi_choices">多选设置</string>
    <string name="survey_input_subjective_title">输入主观题题目</string>
    <string name="survey_input_choice_title">输入选择题题目</string>
    <string name="survey_create">创 建</string>

    <!--设置-->
    <string name="setting_version_update_no">当前版本已是最新版本</string>

    <!--我的钱包-->
    <string name="wallet_bank_list">银行列表</string>
    <string name="wallet_invalid_bankcard">无效银行卡号</string>
    <string name="wallet_invalid_cellphone">无效手机号</string>
    <string name="wallet_invaild_alipay">无效支付宝账号</string>
    <string name="wallet_fail_request">请求失败</string>
    <string name="wallet_unknown_error">未知错误</string>
</resources>
