<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/login_default_avatar"
        android:background="@drawable/bgcorner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture">

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/et_account_hint"
                android:inputType="text"
                android:padding="5dp" />

            <View
                android:id="@+id/apline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divide_line" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/et_password_hint"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_below="@id/ll_user_info"
            android:background="@drawable/shape_blue"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="(目前只针对内测用户开放注册)"
            android:textColor="@color/gray"/>

    </RelativeLayout>


    <com.onlinedoctor.view.TextURLView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_user_btn"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <Button
        android:id="@+id/debug"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/register"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_user_btn"
        android:text="debug"
        android:textColor="@color/blue"
        android:textSize="16sp" />

</RelativeLayout>
