<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.onlinedoctor.view.CommonActionbarBackableRelativeLayout
            android:id="@id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/actionbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="left|top"
                    android:hint="@string/survey_input_subjective_title"
                    android:inputType="textMultiLine"
                    android:minLines="10" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="21dp"
                        android:text="@string/survey_allow_upload_image"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize" />

                    <Switch
                        android:id="@+id/switch_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="15dp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/bt_ok"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/iv_add"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/blue_btn"
                    android:text="@string/survey_create"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Small_TextSize" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/shadow_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_shadow_height"
            android:layout_below="@id/actionbar"
            android:background="@drawable/shadow" />

    </RelativeLayout>

</LinearLayout>