<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/transparent" >

    <LinearLayout
        android:layout_width="@dimen/size_dialog"
        android:layout_height="@dimen/size_dialog"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_background_assistivetouch"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/lay_main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="4.0px"
            android:visibility="visible" >

            <TextView
                android:id="@+id/btn_home_screen"
                style="@style/Icon"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/selector_ic_home"
                android:text="@string/home_screen" />

            <TextView
                android:id="@+id/btn_setting"
                style="@style/Icon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableTop="@drawable/selector_ic_phone"
                android:text="@string/setting" />

            <TextView
                android:id="@+id/btn_lock_screen"
                style="@style/Icon"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/selector_ic_power_down"
                android:text="@string/lock_screen" />

            <TextView
                android:id="@+id/btn_favor"
                style="@style/Icon"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableTop="@drawable/selector_ic_star"
                android:text="@string/favor" />
        </RelativeLayout>
	<!--  
        <RelativeLayout
            android:id="@+id/lay_setting"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="4.0px"
            android:visibility="gone" >

            <ImageView
                android:id="@id/btn_back_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_ic_back" />

            <TextView
                android:id="@id/btn_setting_1"
                style="@style/Icon"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_2"
                style="@style/Icon"
                android:layout_centerHorizontal="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_3"
                style="@style/Icon"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_4"
                style="@style/Icon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_5"
                style="@style/Icon"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_6"
                style="@style/Icon"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_7"
                style="@style/Icon"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/selector_color_icon_switch" />

            <TextView
                android:id="@id/btn_setting_8"
                style="@style/Icon"
                android:layout_centerVertical="true"
                android:textColor="@color/selector_color_icon_switch" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/lay_favor"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="4.0px"
            android:visibility="gone" >

            <ImageView
                android:id="@id/btn_back_favor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/selector_ic_back" />

            <ImageView
                android:id="@id/btn_app_1"
                style="@style/Favor"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:tag="1"
                android:text="@string/screen_lightness" />

            <ImageView
                android:id="@id/btn_app_2"
                style="@style/Favor"
                android:layout_centerHorizontal="true"
                android:tag="2"
                android:text="@string/auto_orientation" />

            <ImageView
                android:id="@id/btn_app_3"
                style="@style/Favor"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:tag="3"
                android:text="@string/flashlight" />

            <ImageView
                android:id="@id/btn_app_4"
                style="@style/Favor"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:tag="4"
                android:text="@string/blue_tooth" />

            <ImageView
                android:id="@id/btn_app_5"
                style="@style/Favor"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:tag="5"
                android:text="@string/moblie_network" />

            <ImageView
                android:id="@id/btn_app_6"
                style="@style/Favor"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:tag="6"
                android:text="@string/wifi" />

            <ImageView
                android:id="@id/btn_app_7"
                style="@style/Favor"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:tag="7"
                android:text="@string/gps" />

            <ImageView
                android:id="@id/btn_app_8"
                style="@style/Favor"
                android:layout_centerVertical="true"
                android:tag="8"
                android:text="@string/mute" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/lay_screen_lightness"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

            <ImageView
                android:id="@id/btn_back_screen_lightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/selector_ic_back" />

            <LinearLayout
                android:id="@id/lay_screen_lightness_operation"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/btn_back_screen_lightness"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_screen_lightness" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <CheckBox
                            android:id="@id/cb_auto_screen_lightness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_screen_lightness" />
                    </LinearLayout>
                </LinearLayout>

                <SeekBar
                    android:id="@id/sb_screen_lightness"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip" />
            </LinearLayout>
        </RelativeLayout>
        -->
    </LinearLayout>

</RelativeLayout>